# pyproject.toml — PEP 621 project metadata for RNV Color Mixer
# ─────────────────────────────────────────────────────────────────────────
# This file makes the project installable via `pip install .` and declares
# the authoritative project metadata. It complements requirements.txt,
# which remains useful for fast runtime-only installs without packaging.

# ─── Build system ────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


# ─── Project metadata ────────────────────────────────────────────────────
[project]
name = "rnv-color-mixer"
dynamic = ["version"]
description = "Professional desktop color-mixing application with paint-mixing simulation and 16+ palette export formats"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "RNV Development" },
]
keywords = [
    "color",
    "color-mixing",
    "color-picker",
    "palette",
    "palette-generator",
    "kubelka-munk",
    "pyqt6",
    "desktop-application",
    "design-tools",
    "artist-tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "PyQt6>=6.5.0,<7.0.0",
    "Pillow>=9.0.0,<12.0.0",
]


# ─── Optional dependency groups ──────────────────────────────────────────
# Install with: pip install -e ".[test]"
# Mirrors requirements-test.txt for users who prefer the modern PEP 621
# approach to dev-dependency management.
[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "coverage>=7.3",
    "hypothesis>=6.90",
]


# ─── Project URLs ────────────────────────────────────────────────────────
[project.urls]
Homepage      = "https://github.com/RNVizion/rnv-color-mixer"
Repository    = "https://github.com/RNVizion/rnv-color-mixer"
"Bug Tracker" = "https://github.com/RNVizion/rnv-color-mixer/issues"


# ─── Command-line entry point ────────────────────────────────────────────
# After `pip install .`, users can launch the app by typing `rnv-color-mixer`
# from any terminal — no need to navigate to the project directory first.
[project.scripts]
rnv-color-mixer = "RNV_Color_Mixer:main"


# ─── Package discovery ───────────────────────────────────────────────────
# Explicit package list prevents setuptools from accidentally picking up
# test files, docs, or scratch directories.
[tool.setuptools]
py-modules = ["RNV_Color_Mixer"]
packages = ["core", "ui", "utils"]


# ─── Dynamic version resolution ──────────────────────────────────────────
# Reads VERSION = "x.y.z" from utils/config.py via static AST parsing (no
# module execution), preserving the single-source-of-truth pattern.
#
# If this ever fails during build, replace the [project] `dynamic` line
# with `version = "x.y.z"` and remove this [tool.setuptools.dynamic] block.
[tool.setuptools.dynamic]
version = { attr = "utils.config.VERSION" }


# ─── Resource file inclusion ─────────────────────────────────────────────
# Ensure fonts, icons, button images, and background images are packaged
# alongside the Python modules when building a wheel.
[tool.setuptools.package-data]
"*" = [
    "resources/**/*",
    "py.typed",
]


# ─── mypy configuration ──────────────────────────────────────────────────
# Non-strict baseline that works out-of-the-box without PyQt6-stubs installed.
# All 723 project functions carry type annotations (see py.typed marker);
# the options below tune mypy's behavior around Qt's dynamic signal types
# without flooding the output with false positives.
#
# To run: `mypy .` from the project root (requires `pip install mypy`).
# To tighten later: flip `disallow_untyped_defs` to true and remove files
# from per-module overrides as you clean each one up.
[tool.mypy]
python_version = "3.10"
files = ["core", "ui", "utils", "RNV_Color_Mixer.py"]

# PyQt6 ships without type stubs by default; silence the import errors.
# Install PyQt6-stubs if you want full Qt type checking.
ignore_missing_imports = true

# Useful warnings that catch real bugs without generating noise.
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = false  # Qt signal slots often return Any legitimately

# Be strict about what we've explicitly annotated, but don't force
# annotations on dynamically generated Qt slot signatures.
check_untyped_defs = true
no_implicit_optional = true

# Give clearer errors with source context.
pretty = true
show_error_codes = true
show_column_numbers = true

# Per-module overrides for specific Qt integration points.
[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true
